# jan26_loonie_customize

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  azure-pipelines-container-app.yml  azure-pipelines.yml  claude.md  docker-compose.yaml  gunicorn.conf.py  pull_request_template.md  pyproject.toml  requirements.txt  retrain_loonie_doc.md
customize_sql/: originated_join_IBVid.sql
infra/: arm.bicep  arm.json  main.bicep
notebooks/: 01_extract_features.ipynb  02_auc_current_model.ipynb  03_retrain_model.ipynb  04_evaluate_retrain.ipynb  05_production_model_metadata.ipynb
src/: app.py  app_utils.py  fastapi_app.py
src/api/: ApiClient.py  blueprints.py
src/config/: config.py  knowledge_base_hashmap.pkl  preload.py  settings.py  source_map.pkl
src/dataset/: holidays.csv  knowledge_base_proto.py  loan_list.py  us_cities.py
src/labeling/: __init__.py  agent_label_utils.py  label_transactions.py  predict_transaction.py  transaction_prep.py
src/model/: redzone_calibrator_data.pkl  run_model.py
src/postprocess/: __init__.py  analyze_transactions.py  application_checker.py  feature_extraction.py
src/schemas/: model_input.py  model_output.py
src/test_scripts/: ArchiveIACode.ps1  CashmaxIPMTestUtility.py  ChirpIPMTestUtility.py  PlaidIPMTestUtility.py  RunCashMaxIATest.ps1  RunChirpIATest.ps1  RunPlaidIATest.ps1  redis_key_inspector.py  run_cashmax_for_notazo_load_to_db.py  run_chirp_for_notazo_load_to_db.py  run_plaid_for_notazo_load_to_db.py
src/training_scripts/: Augment_data.py  multi_cat_model_partial.pkl  train.ipynb  train.py
src/utils/: decorators.py  utils.py
src/version/: version.txt
tests/: conftest.py
tests/api/: model_analyze_payload.py  test_agentCategory.py  test_fastapi_endpoints.py  test_labeling_endpoints.py  test_model_analyze_endpoints.py  test_redis_kb.py  test_transactions_endpoints.py
tests/data/: 100.json  1000.json  2000.json  NCL_b11eee28-3739-455c-a491-104b1e42b7b3_Request.json  accountGuid575.json  arg_for_categorize_income_source.json  expected_ner_output.csv  income_source_07LNEQ.json  model_crush_3XVEQS.json  (+15 more)
(+224 files in other folders)
