[tool.pytest.ini_options]
pythonpath = "src"
filterwarnings = [
  # ignore only the __version__ deprecation coming from flask_apispec.apidoc
  "ignore:The '__version__' attribute is deprecated and will be removed in in a future version.*:DeprecationWarning:flask_apispec\\.apidoc",
  "ignore:The '__version__' attribute is deprecated and will be removed in in a future version.*:DeprecationWarning:flask_apispec\\.wrapper",
]

[tool.coverage.run]
omit = [
    "src/test_scripts/*",
    "src/training_scripts/*"
    ]

[tool.ruff]
line-length = 120
exclude = ["src/test_scripts/*", "src/training_scripts/*"]

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.poetry]
name = "income-analyzer-model"
version = "16.7.5"
description = "Income Analyzer Pre-Onboarding Model"
authors = ["Dean Patel <dean@dmaassociatescorp.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
joblib = "1.3.2"
nltk = "3.8.1"
numpy = "1.26.2"
pandas = "2.1.4"
pyodbc = "5.0.1"
scikit_learn = "1.4.0"
scikit_optimize = "0.9.0"
scipy = "1.13.0"
shap = "0.44.0"
spacy = "3.7.4"
tqdm = "4.66.1"
Flask = "3.1.0"
Flask-Cors = "4.0.1"
waitress = "3.0.0"
python-dotenv = "1.0.1"
marshmallow = "3.23.0"
apispec = "6.8.1"
flask-apispec = "0.11.4"
gunicorn = "23.0.0"
jellyfish = "1.1.3"
fuzzywuzzy = "0.18.0"
python-levenshtein = "0.27.1"
simplejson = "3.20.1"
httpx = "0.28.1"
orjson = "3.9.10"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic = "^2.11.7"
redis = "6.4.0"
autogluon-tabular = {version = "1.4.0", extras = ["catboost","lightgbm","xgboost"]}

[tool.poetry.dev-dependencies]
pytest = "^7.2"
mypy = "^1.0.0"
ruff = "^0.0.291"
pytest-cov = "^4.0"
pytest-azurepipelines = "^1.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"